Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
 
         <div class="home__info">
-          <h1 class="home__title">👋🏻 Hey, soy Angel <br> Lailo </h1>
+          <h1 class="home__title">👋🏻 Hola, Mi nombre es Angel <br> Lailo </h1>
           <p class="home__description">
             Soy desarrollador web, apasionado por la tecnología y la programación,
             y creo que como todo programador, un buen café ☕.
